Edited receive screen
- Edited Receive screen

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -26,7 +26,7 @@
             <br>
             <!--Business Location-->
             <div class = "input-form">
-                <label for="b-address">Business Current Location</label>
+                <label for="b-address">Business Current Location *INCLUDE STATE, CITY, AND ZIP*</label>
                 <input type="text" name="b-address" class="form-control" id = "b-address" placeholder="123 Lorem. Ave.">
             <br>
             <br>
