--- a/templates/donate.html
+++ b/templates/donate.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="../static/assets/favicon.png" type="image/x-icon">
     <title>Donate</title>
     <link rel="stylesheet" href="../static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div class = "main_section">
@@ -59,8 +60,10 @@
         <div id = "confirmation_done"></div>
          
         <!--Drop-Off and Send-->
-         <div class="dropoff_send">
-            <button class="Sbtn" id="send">Send</button>
+         <div class="send_back">
+            <button type="button" class="btn btn-outline-warning button" id="back-donate">Back</button>
+            <button type="button" class="btn btn-outline-success button" id="send">Send</button>
+            
             
 
          </div>
@@ -70,5 +73,6 @@
 
     </div>
     <script type="text/javascript" src = "{{url_for('static', filename = 'donate.js')}}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
