--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,9 @@
     <title>Meal Share</title>
     <link rel="stylesheet" href="../static/style.css">
     <link rel="icon" href="../static/assets/favicon.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
     
     <div class = "main_section">
@@ -34,5 +36,6 @@
         </div>-->
     </div>
     <script type="text/javascript" src="{{ url_for('static',filename = 'script.js')}}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
