--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Beiruti:wght@200..900&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap');
 .main_section{
+    width: 100%;
+    padding:20px;
+    
+}
+.content{
     width: 50%;
     text-align: center;
     margin: 0 auto;
-    padding:20px;
+}
+body,*{
     background-color: #e6f9e6;
 }
 h1{
@@ -50,7 +56,7 @@ h3{
 }
 
 .send_back{
-    margin: 3%;;
+    margin: 3%;
 }
 
 .button{
@@ -101,3 +107,5 @@ h3{
     margin-bottom: 20px;
     font-size: 22px;
 }
+
+
