--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,8 @@
 <body>
     
     <div class = "main_section">
-        <img src="../static/assets/logo.png" alt="Meal Share">
+        <div class="content">
+            <img src="../static/assets/logo.png" alt="Meal Share">
         <!--Title-->
         <h3>WE ARE ENDING HUNGER IN OUR COMMUNITY</h3>
         
@@ -34,6 +35,7 @@
             <button id = "signup-btn" class = "Sbtn">SIGN UP</button>
 
         </div>-->
+        </div>
     </div>
     <script type="text/javascript" src="{{ url_for('static',filename = 'script.js')}}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
