--- a/templates/receive.html
+++ b/templates/receive.html
@@ -9,86 +9,87 @@
 </head>
 <body>
    <div class = "main_section">
-    <h1>RECEIVE</h1>
-    <div id = "meal-container">
-
-        <!--Loop through  every donated meal and display it-->
-        {% for meal in meals %}
-            <div class = "meal" onclick="highlight_meal(this)"> 
-                <img src = "../static/images/{{meal[3]}}" alt = "Image" id = "mealimage">
-                <h3> Business Name - {{  meal[0] }}</h3>
-                <h4> Business Email - {{  meal[1] }}</h4>
-                <h4> Business Address - {{  meal[2] }}</h4>
-                <h5> Contents - {{  meal[4] }}</h5>
-                <h6>Allergies - {{ meal[5] }}</h6>
+    <div class="content">
+        <h1>RECEIVE</h1>
+        <div id = "meal-container">
+    
+            <!--Loop through  every donated meal and display it-->
+            {% for meal in meals %}
+                <div class = "meal" onclick="highlight_meal(this)"> 
+                    <img src = "../static/images/{{meal[3]}}" alt = "Image" id = "mealimage">
+                    <h3> Business Name - {{  meal[0] }}</h3>
+                    <h4> Business Email - {{  meal[1] }}</h4>
+                    <h4> Business Address - {{  meal[2] }}</h4>
+                    <h5> Contents - {{  meal[4] }}</h5>
+                    <h6>Allergies - {{ meal[5] }}</h6>
+                </div>
+            {% endfor %}
+        </div>
+    
+        <form action="" id="donate-form">
+            <!--Name Input-->
+            <div class = "input-form">
+                <label for="org-name">Organization Name</label>
+                <input type="text" name="org-name" class="form-control" id="org-name" placeholder="MealShare">
             </div>
-        {% endfor %}
+            <br>
+             <!--Representative Name Input-->
+             <div class = "input-form">
+                <label for="rep-org-name">Representative of Organization Name</label>
+                <input type="text" name="rep-org-name" class="form-control" id="rep-org-name" placeholder="Jamie Mallard">
+            </div>
+            <br>
+            <!--Email Input-->
+            <div class = "input-form">
+                <label for="org-email">Organization Email</label>
+                <input type="email" name="org-email" class="form-control" id = "org-email" placeholder="mealshare@gmail.com">
+            </div>
+            <br>
+            <br>
+            <br>
+            <!--Address Input-->
+            <div class = "input-form">
+                <label for="org-address"> Organization Address </label>
+                <input type="text" name= "org-address" class="form-control" id = "org-address" placeholder="123 Street Name">
+            </div>
+            <br>
+            <!--City Input-->
+            <div class = "input-form">
+                <label for="city-input">City</label>
+                <input type="text" name="city-input" class="form-control" id = "city" placeholder="City-ville">
+            </div>
+    
+            <br>
+            <!--State Input-->
+            <div class = "input-form">
+                <label for="state-input">State</label>
+                <input type="text" name="state-input" class="form-control" id = "state" placeholder="State-ville">
+            </div>
+            <br>
+            <!--Zip Code Input-->
+            <div class = "input-form">
+                <label for= "zip-input"> Zip Code </label>
+                <input type="text" name="zip-input" class="form-control" id = "zipcode" placeholder="12345">
+            </div>
+            <br>
+    
+            <div id = "confirm_receive">
+    
+            </div>
+              
+              <!--Done-->
+              <div class="dropoff_send">
+                <button type="button" class="btn btn-outline-warning button" id="back-recieve">Back</button>
+                <button type="button" class="btn btn-outline-success button" id="send">Receive Food</button>
+             </div>
+             
+             <footer>
+                &copy; 2024 @mealshare
+             </footer>
+            
+        </form>
+    
     </div>
-
-    <form action="" id="donate-form">
-        <!--Name Input-->
-        <div class = "input-form">
-            <label for="org-name">Organization Name</label>
-            <input type="text" name="org-name" class="form-control" id="org-name" placeholder="MealShare">
-        </div>
-        <br>
-         <!--Representative Name Input-->
-         <div class = "input-form">
-            <label for="rep-org-name">Representative of Organization Name</label>
-            <input type="text" name="rep-org-name" class="form-control" id="rep-org-name" placeholder="Jamie Mallard">
-        </div>
-        <br>
-        <!--Email Input-->
-        <div class = "input-form">
-            <label for="org-email">Organization Email</label>
-            <input type="email" name="org-email" class="form-control" id = "org-email" placeholder="mealshare@gmail.com">
-        </div>
-        <br>
-        <br>
-        <br>
-        <!--Address Input-->
-        <div class = "input-form">
-            <label for="org-address"> Organization Address </label>
-            <input type="text" name= "org-address" class="form-control" id = "org-address" placeholder="123 Street Name">
-        </div>
-        <br>
-        <!--City Input-->
-        <div class = "input-form">
-            <label for="city-input">City</label>
-            <input type="text" name="city-input" class="form-control" id = "city" placeholder="City-ville">
-        </div>
-
-        <br>
-        <!--State Input-->
-        <div class = "input-form">
-            <label for="state-input">State</label>
-            <input type="text" name="state-input" class="form-control" id = "state" placeholder="State-ville">
-        </div>
-        <br>
-        <!--Zip Code Input-->
-        <div class = "input-form">
-            <label for= "zip-input"> Zip Code </label>
-            <input type="text" name="zip-input" class="form-control" id = "zipcode" placeholder="12345">
-        </div>
-        <br>
-
-        <div id = "confirm_receive">
-
-        </div>
-          
-          <!--Done-->
-          <div class="dropoff_send">
-            <button class="Sbtn" id="send">Receive Food</button>
-         </div>
-         
-         <footer>
-            &copy; 2024 @mealshare
-         </footer>
-        
-    </form>
-
-
-
    </div>
    <script type="text/javascript" src = "../static/receive.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
