--- a/templates/donate.html
+++ b/templates/donate.html
@@ -41,12 +41,12 @@
                     <p>weight(lbs) Item Name</p>
                     <ul class="donation-list" id="List">
                         <div class="list-item" id="list-item">
-                            <input type="text" name="list-item" class="form-control" id = "" placeholder="200lbs">
-                            <input type="text" name="list-item" class="form-control" id = "" placeholder="apples">
+                            <input type="text" name="list-item" class="form-control" id = "item" placeholder="Apples">
+                            <input type="text" name="list-item" class="form-control" id = "weight" placeholder="200lbs">
                             
                         </div>
                     </ul>
-                    <button type="button" class="btn btn-light">Add Row</button>
+                    <button type="button" class="btn btn-light" id="add-row">Add Row</button>
                 </div>
                 <br>
                 <br>
