--- a/templates/donate.html
+++ b/templates/donate.html
@@ -11,7 +11,7 @@
 <body>
     <div class = "main_section">
         <div class="content">
-            <h1>    DONATE    </h1>
+            <h1 id="titleDonate">    DONATE    </h1>
 
             <form action="" id="donate-form">
                 <!--Business Name Input-->
@@ -42,7 +42,7 @@
                     <ul class="donation-list" id="List">
                         <div class="list-item" id="list-item">
                             <input type="text" name="list-item" class="form-control" id = "item" placeholder="Apples">
-                            <input type="text" name="list-item" class="form-control" id = "weight" placeholder="200lbs">
+                            <input type="text" name="list-item" class="form-control" id = "weight" placeholder="50lbs">
                             
                         </div>
                     </ul>
