Finished with deployment
Successful deployment
Fixed Links for Production
I got all items from the donate page

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -41,8 +41,8 @@
                     <p>weight(lbs) Item Name</p>
                     <ul class="donation-list" id="List">
                         <div class="list-item" id="list-item">
-                            <input type="text" name="list-item" class="form-control" id = "item" placeholder="Apples">
-                            <input type="text" name="list-item" class="form-control" id = "weight" placeholder="50lbs">
+                            <input type="text" name="list-item" class="form-control food-name" id = "item" placeholder="Apples">
+                            <input type="text" name="list-item" class="form-control food-weight" id = "weight" placeholder="50lbs">
                             
                         </div>
                     </ul>
