Updated design of the main page
Updated the fonts
Added How it Works section, Our Goal section
Added World Hunger Statistics section with links to websites
Updated button colors
Fixed spacing
Made it scroll down

2 WEEKS TILL' COMP!!!!!!!!

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,33 @@
         <div class="content">
             <img src="../static/assets/logo.png" alt="Meal Share">
         <!--Title-->
-        <h3>WE ARE ENDING HUNGER IN OUR COMMUNITY</h3>
-        
+        <h2>WE ARE ENDING HUNGER IN OUR COMMUNITY</h3>
+        <br>
+        <br>
+        <h3>World Hunger Statistics</h3>
+        <br>
         <!--Description-->
-        <p>World hunger affects millions globally, with 149 million children under five stunted and 45 million wasted due to malnutrition in 2020. The COVID-19 pandemic worsened food insecurity, adding an estimated 100 million people to those facing hunger.</p>
+        <div class="stats">
+            <div id="stat1" class="info">
+                <p>The world produces enough food to feed all 8 billion people, yet 733 million people (1 in 11) go hungry every day. - <a href="https://concernusa.org/news/world-hunger-facts/">ConcernUsa World Hunger Facts</a></p>
+                <img id="img1" class="Statistic" src="../static/assets/Screenshot_2024-12-26_at_1.27.19_PM-removebg-preview.png" alt="Graphic showing world hunger statistic with text '733 million people go hungry every day'">
+                <p>2.8 billion people around the world cannot afford a healthy diet — 35% of the global population. - <a href="https://concernusa.org/news/world-hunger-facts/">ConcernUsa World Hunger Facts</a> </p>
+            </div>
+            
+            <div id="stat2" class="info">
+                <p>Early warning hunger hotspots November 2024 to May 2025</p>
+                <img id="img2" class="Statistic" src="../static/assets/Screenshot 2024-12-27 at 11.07.06 AM.png" alt="Infographic showing global food insecurity data">
+                <p>- <a href="https://www.wfp.org/publications/hunger-hotspots-fao-wfp-early-warnings-acute-food-insecurity-november-2024-may-2025">World Food Programme and Food and Agriculture Organization of the United Nations</a></p>
+            </div>
+        </div>
+        <br>
+        <h3>OUR GOAL</h2>
         
-        <p>MealShare is an application that allows people to make a difference. From delivery people to donators, a member of the community will take the role. </p>
+        <p>MealShare is a website that helps businesses work together to fight hunger. It connects companies that want to help provide food with businesses like grocery stores. By working together, they can make a big difference. MealShare’s goal is to bring these two groups together to help reduce hunger.</p>
+        <br>
+        <h3>HOW IT WORKS</h2>
+        
+        <p>The Donate button is for organizations that distribute food to society for a price and may have leftovers. Examples include grocery stores. They will fill out a form and contact the receiver. The Receive button is for non-profit organizations that distribute food to the needy. They can choose what they would like to receive and which grocery store. Accordingly, the grocery stores will give the food to the organizations which will then be distributed to the needy.</p>
 
         <!--Donate and Deliver and Recieve-->
         <div class = "donatedeliver">
