--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Beiruti:wght@200..900&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 .main_section{
     width: 100%;
     padding:20px;
     
 }
+
+.stats {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.info {
+    width: 45%;
+    border: 1px solid #475744; 
+    border-radius: 8px; 
+    padding: 15px; 
+    width: 400px;
+    text-align: center; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    background-color: #e6f9e6;
+}
+
+.Statistic {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 10px;
+}
+
+p {
+    color: #333;
+    font-family: "Beiruti";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+}
+
 .content{
     width: 50%;     
     text-align: center;
@@ -33,16 +67,23 @@ label{
 
 
 
-h3{
+h2{
     color: #526E48;
     font-family: "Bona Nova SC";
     font-style: normal;
     font-weight: 400;
 }
 
+h3{
+  font-family: "Arsenal SC", serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #526E48;
+}
+
 
 .Dbtn{
-    background-color: #D5ED9F;
+    background-color: #ceefcd;
     width: 150px;
     height: 45px;
     margin: 2% 6%;
@@ -52,7 +93,7 @@ h3{
 }
 
 .Sbtn{
-    background-color: #D5ED9F;
+    background-color: #ceefcd;
     width: 200px;
     height: 45px;
     margin: 4% 6%;
