--- a/templates/donate.html
+++ b/templates/donate.html
@@ -12,8 +12,10 @@
     <div class = "main_section">
         <div class="content">
             <h1 id="titleDonate">    DONATE    </h1>
-
+            <br>
             <form action="" id="donate-form">
+                <h3>Business Information</h3>
+                <br>
                 <!--Business Name Input-->
                 <div class = "input-form">
                     <label for="b-full-name">Business Full Name</label>
@@ -33,6 +35,8 @@
                 <br>
                 <br>
                 <br>
+                <h3>Donation Information</h3>
+                <br>
                 <!--Donation List Input-->
                 <div class = "input-form">
                     <label for="donatelist-input">Donation List</label>
@@ -47,6 +51,7 @@
                         </div>
                     </ul>
                     <button type="button" class="btn btn-light" id="add-row">Add Row</button>
+                    <button type="button" class="btn btn-light" id="delete-row">Add Row</button>
                 </div>
                 <br>
                 <br>
