--- a/templates/index.html
+++ b/templates/index.html
@@ -13,25 +13,26 @@
     
     <div class = "main_section">
         <div class="content">
-            <img src="../static/assets/logo.png" alt="Meal Share">
+            <img id="logo" src="../static/assets/logo.png" alt="Meal Share">
+            <br>
+            <br>
         <!--Title-->
-        <h2>WE ARE ENDING HUNGER IN OUR COMMUNITY</h3>
-        <br>
+        <h2>We Are Ending Hunger In Our Community</h3>
         <br>
         <h3>World Hunger Statistics</h3>
         <br>
         <!--Description-->
         <div class="stats">
             <div id="stat1" class="info">
-                <p>The world produces enough food to feed all 8 billion people, yet 733 million people (1 in 11) go hungry every day. - <a href="https://concernusa.org/news/world-hunger-facts/">ConcernUsa World Hunger Facts</a></p>
+                <p>The world produces enough food to feed all 8 billion people, yet 733 million people (1 in 11) go hungry every day. - <a href="https://concernusa.org/news/world-hunger-facts/" target="_blank">ConcernUsa World Hunger Facts</a></p>
                 <img id="img1" class="Statistic" src="../static/assets/Screenshot_2024-12-26_at_1.27.19_PM-removebg-preview.png" alt="Graphic showing world hunger statistic with text '733 million people go hungry every day'">
-                <p>2.8 billion people around the world cannot afford a healthy diet — 35% of the global population. - <a href="https://concernusa.org/news/world-hunger-facts/">ConcernUsa World Hunger Facts</a> </p>
+                <p>2.8 billion people around the world cannot afford a healthy diet — 35% of the global population. - <a href="https://concernusa.org/news/world-hunger-facts/" target="_blank">ConcernUsa World Hunger Facts</a> </p>
             </div>
             
             <div id="stat2" class="info">
                 <p>Early warning hunger hotspots November 2024 to May 2025</p>
                 <img id="img2" class="Statistic" src="../static/assets/Screenshot 2024-12-27 at 11.07.06 AM.png" alt="Infographic showing global food insecurity data">
-                <p>- <a href="https://www.wfp.org/publications/hunger-hotspots-fao-wfp-early-warnings-acute-food-insecurity-november-2024-may-2025">World Food Programme and Food and Agriculture Organization of the United Nations</a></p>
+                <p>- <a href="https://www.wfp.org/publications/hunger-hotspots-fao-wfp-early-warnings-acute-food-insecurity-november-2024-may-2025" target="_blank">Hunger Hotspots: FAO-WFP early warnings on acute food insecurity, November 2024 to May 2025 Outlook</a></p>
             </div>
         </div>
         <br>
