--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,11 @@
     
 }
 
+#logo{
+    width: 400px;
+    height: 400px;
+}
+
 .stats {
     display: flex;
     justify-content: space-between;
@@ -15,13 +20,13 @@
 
 .info {
     width: 45%;
-    border: 1px solid #475744; 
+    border: 2px solid #264621; 
     border-radius: 8px; 
     padding: 15px; 
     width: 400px;
     text-align: center; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-    background-color: #e6f9e6;
+    box-shadow: 0 4px 8px rgb(0, 0, 0, 0.2); 
+    background-color: rgb(75, 164, 89);
 }
 
 .Statistic {
@@ -45,7 +50,7 @@ p {
     margin: 0 auto;
 }
 body,*{
-    background-color: #e5fee8;
+    background-color: #ddffdc;
 }
 h1{
     word-spacing: 10px;
@@ -58,12 +63,13 @@ h1{
 }
 
 
-label{
+label,.label{
     font-family: "Beiruti";
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
 }
+
 
 
 
@@ -83,7 +89,9 @@ h3{
 
 
 .Dbtn{
-    background-color: #ceefcd;
+    background-color: rgb(75, 164, 89);
+    color: white;
+    border-color: white;
     width: 150px;
     height: 45px;
     margin: 2% 6%;
@@ -93,7 +101,9 @@ h3{
 }
 
 .Sbtn{
-    background-color: #ceefcd;
+    background-color: rgb(75, 164, 89);
+    color: white;
+    border-color: white;
     width: 200px;
     height: 45px;
     margin: 4% 6%;
