--- a/templates/donate.html
+++ b/templates/donate.html
@@ -51,7 +51,6 @@
                         </div>
                     </ul>
                     <button type="button" class="btn btn-light" id="add-row">Add Row</button>
-                    <button type="button" class="btn btn-light" id="delete-row">Add Row</button>
                 </div>
                 <br>
                 <br>
@@ -88,7 +87,7 @@
         </div>
 
     </div>
-    <script type="text/javascript" src = "{{url_for('static', filename = 'donate.js')}}"></script>
+    <script type="text/javascript" src = "../static/donate.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
