--- a/templates/donate.html
+++ b/templates/donate.html
@@ -51,6 +51,7 @@
                         </div>
                     </ul>
                     <button type="button" class="btn btn-light" id="add-row">Add Row</button>
+                    <button type="button" class="btn btn-light" id="delete-row">Delete Row</button>
                 </div>
                 <br>
                 <br>
