--- a/templates/index.html
+++ b/templates/index.html
@@ -24,15 +24,15 @@
         <!--Description-->
         <div class="stats">
             <div id="stat1" class="info">
-                <p>The world produces enough food to feed all 8 billion people, yet 733 million people (1 in 11) go hungry every day. - <a href="https://concernusa.org/news/world-hunger-facts/" target="_blank">ConcernUsa World Hunger Facts</a></p>
-                <img id="img1" class="Statistic" src="../static/assets/Screenshot_2024-12-26_at_1.27.19_PM-removebg-preview.png" alt="Graphic showing world hunger statistic with text '733 million people go hungry every day'">
-                <p>2.8 billion people around the world cannot afford a healthy diet — 35% of the global population. - <a href="https://concernusa.org/news/world-hunger-facts/" target="_blank">ConcernUsa World Hunger Facts</a> </p>
+                <p class="statp">The world produces enough food to feed all 8 billion people, yet 733 million people (1 in 11) go hungry every day. - <a href="https://concernusa.org/news/world-hunger-facts/" target="_blank" class="statp">ConcernUsa World Hunger Facts</a></p>
+                <img id="img1" class="Statistic" src="../static/assets/Stat1.png" alt="Graphic showing world hunger statistic with text '733 million people go hungry every day'">
+                <p class="statp">2.8 billion people around the world cannot afford a healthy diet — 35% of the global population. - <a href="https://concernusa.org/news/world-hunger-facts/" target="_blank" class="statp">ConcernUsa World Hunger Facts</a> </p>
             </div>
             
             <div id="stat2" class="info">
-                <p>Early warning hunger hotspots November 2024 to May 2025</p>
-                <img id="img2" class="Statistic" src="../static/assets/Screenshot 2024-12-27 at 11.07.06 AM.png" alt="Infographic showing global food insecurity data">
-                <p>- <a href="https://www.wfp.org/publications/hunger-hotspots-fao-wfp-early-warnings-acute-food-insecurity-november-2024-may-2025" target="_blank">Hunger Hotspots: FAO-WFP early warnings on acute food insecurity, November 2024 to May 2025 Outlook</a></p>
+                <p class="statp" >Early warning hunger hotspots November 2024 to May 2025</p>
+                <img id="img2" class="Statistic" src="../static/assets/Stat2(2).png" alt="Infographic showing global food insecurity data">
+                <p class="statp" >- <a href="https://www.wfp.org/publications/hunger-hotspots-fao-wfp-early-warnings-acute-food-insecurity-november-2024-may-2025" target="_blank" class="statp">Hunger Hotspots: FAO-WFP early warnings on acute food insecurity, November 2024 to May 2025 Outlook</a></p>
             </div>
         </div>
         <br>
