--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,10 @@
     
 }
 
+body,*{
+    background-color: #ddffdc;
+}
+
 #logo{
     width: 400px;
     height: 400px;
@@ -16,17 +20,20 @@
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    
 }
 
+
 .info {
-    width: 45%;
+    width: 400px;
+    max-width: 45%; 
     border: 2px solid #264621; 
     border-radius: 8px; 
     padding: 15px; 
-    width: 400px;
     text-align: center; 
-    box-shadow: 0 4px 8px rgb(0, 0, 0, 0.2); 
-    background-color: rgb(75, 164, 89);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: #4ba459;
+    box-sizing: border-box;
 }
 
 .Statistic {
@@ -36,12 +43,23 @@
     margin-bottom: 10px;
 }
 
+#img1{
+    background-color: #4ba459;
+}
+
 p {
     color: #333;
     font-family: "Beiruti";
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
+    
+}
+
+.statp{
+    background-color: #4ba459;
+    color: white;
+    font-weight: 800px;
 }
 
 .content{
@@ -49,9 +67,13 @@ p {
     text-align: center;
     margin: 0 auto;
 }
-body,*{
-    background-color: #ddffdc;
+
+.contentr{
+    width: 80%;     
+    text-align: center;
+    margin: 0 auto;
 }
+
 h1{
     word-spacing: 10px;
     font-family: "Bona Nova SC";
@@ -128,16 +150,25 @@ h3{
     gap: 20px; 
     justify-content: center; 
     padding: 20px; 
-    background-color: #e6f9e6;} 
+    background-color: #ddffdc;} 
     
 .meal { 
-    border: 1px solid #ccc; 
+    border: 3px solid #ffffff; 
     border-radius: 8px; 
     padding: 15px; 
     width: 400px;
     text-align: center; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-    background-color: #e6f9e6;
+    background-color: #4ba459;
+}
+
+
+.datar{
+    background-color:#4ba459;
+    font-family: "Arsenal SC", serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #ffffff;
 }
 
 .meal:hover {
