--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Share</title>
     <link rel="stylesheet" href="../static/style.css">
-    <link rel="icon" href="../static/assets/favicon.png" type="image/x-icon">
+    <link rel="icon" href="../static/assets/favicon2.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
@@ -30,7 +30,7 @@
             </div>
             
             <div id="stat2" class="info">
-                <p class="statp" >Early warning hunger hotspots November 2024 to May 2025</p>
+                <p class="statp" >Number of People in Food Insecurity in Hunger Hotspots</p>
                 <img id="img2" class="Statistic" src="../static/assets/Stat2(2).png" alt="Infographic showing global food insecurity data">
                 <p class="statp" >- <a href="https://www.wfp.org/publications/hunger-hotspots-fao-wfp-early-warnings-acute-food-insecurity-november-2024-may-2025" target="_blank" class="statp">Hunger Hotspots: FAO-WFP early warnings on acute food insecurity, November 2024 to May 2025 Outlook</a></p>
             </div>
