--- a/templates/receive.html
+++ b/templates/receive.html
@@ -6,7 +6,7 @@
     <title>Receive</title>
     <link rel="stylesheet" href="../static/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    
 </head>
 <body>
    <div class = "main_section">
@@ -24,7 +24,7 @@
                 <img class="datar" src = "../static/images/{{meal[3]}}" alt = "Image" id = "mealimage">
                 <h3 class="datar"> {{  meal[0] }}</h3>
                 <h4 class="datar">{{  meal[1] }}</h4>
-                <h4 class="datar">{{  meal[2] }}</h4>
+                <h5 class="datar">{{  meal[2] }}</h5>
                 {% for foodname, foodweight in zip(meal[4],meal[5]) %}
                     <h5 class="datar">{{foodname}} - {{foodweight}}lbs (pounds) </h5>
                 {% endfor %}
@@ -107,5 +107,43 @@
    </div>
    <script type="text/javascript" src = "../static/receive.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+   <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init({
+            publicKey: "U0zlwRKCgaJPFE8jx",
+        });
+    })();
+    async function SendEmail(recipienteEmail, subject, message){
+        try{
+            const emailtemplate = {
+                email_to: recipienteEmail, 
+                subject: subject,
+                message: message
+            }
+            const response = await emailjs.send(
+                "service_dt8e12w",
+                "template_wfj4qy5",
+                emailtemplate
+            )
+            if (response.status == 200){
+                console.log("Email sent. You will receive it shortly")
+                return true
+            }
+        }
+        catch(error){
+            console.error("Email couldn't be sent", error)
+            throw error 
+        }
+    }
+    async function Send(){
+        let receiveremail = document.getElementById("org-email").value
+        const result = await SendEmail(receiveremail, "Delivery Confirmation", "Thank you for choosing MealShare! The donation that you chose will be delivered to you soon!")
+        console.log(result)
+    }
+document.getElementById("send").addEventListener("click", Send)
+    </script>
 </body>
 </html>
