--- a/static/style.css
+++ b/static/style.css
@@ -8,12 +8,47 @@
 }
 
 body,*{
-    background-color: #ddffdc;
+    background-color: #d4fddb;
+}
+
+#menu{
+    width: 100%;
+    height: 10%;
+    background-color:#DDE5B6;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    display: flex;
+    justify-content: space-around;
+}
+
+#menu h4{
+    background-color:#DDE5B6 ;
+    margin: 1.5%;
+}
+
+#menu a{
+    background-color:#DDE5B6 ;
+    color: black;
+    margin: 1.5%;
+    text-decoration: none;
+    font-size: 1.5em;
+}
+#menu a:hover{
+    text-decoration: underline;
+}
+#infodropdown{
+    display: none;
+}
+#info:hover #infodropdown{
+    display: block;
 }
 
 #logo{
     width: 400px;
     height: 400px;
+    margin-top: 20%;
 }
 
 .stats {
@@ -27,13 +62,14 @@ body,*{
 .info {
     width: 400px;
     max-width: 45%; 
-    border: 2px solid #264621; 
+    border: 2px solid #2E3D30; 
     border-radius: 8px; 
     padding: 15px; 
     text-align: center; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    background-color: #4ba459;
+    background-color: #2E3D30;
     box-sizing: border-box;
+    border-color: #ffffff;
 }
 
 .Statistic {
@@ -44,11 +80,11 @@ body,*{
 }
 
 #img1{
-    background-color: #4ba459;
+    background-color: #2E3D30;
 }
 
 p {
-    color: #333;
+    color: black;
     font-family: "Beiruti";
     font-style: normal;
     font-weight: 400;
@@ -57,7 +93,7 @@ p {
 }
 
 .statp{
-    background-color: #4ba459;
+    background-color: #2E3D30;
     color: white;
     font-weight: 800px;
 }
@@ -96,7 +132,7 @@ label,.label{
 
 
 h2{
-    color: #526E48;
+    color: #4A7C59;
     font-family: "Bona Nova SC";
     font-style: normal;
     font-weight: 400;
@@ -106,12 +142,12 @@ h3{
   font-family: "Arsenal SC", serif;
   font-weight: 400;
   font-style: normal;
-  color: #526E48;
+  color: #4A7C59;
 }
 
 
 .Dbtn{
-    background-color: rgb(75, 164, 89);
+    background-color: #6B8E23;
     color: white;
     border-color: white;
     width: 150px;
@@ -123,7 +159,7 @@ h3{
 }
 
 .Sbtn{
-    background-color: rgb(75, 164, 89);
+    background-color: #6B8E23;
     color: white;
     border-color: white;
     width: 200px;
@@ -159,12 +195,12 @@ h3{
     width: 400px;
     text-align: center; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-    background-color: #4ba459;
+    background-color: 4A7C59;
 }
 
 
 .datar{
-    background-color:#4ba459;
+    background-color:#2E3D30;
     font-family: "Arsenal SC", serif;
     font-weight: 400;
     font-style: normal;
