--- a/templates/index.html
+++ b/templates/index.html
@@ -10,16 +10,25 @@
 </head>
 
 <body>
-    
+    <div id="menu">
+        <h4>MEAL SHARE</h4>
+        <a href="http://127.0.0.1:8000/views/donate">DONATE</a>
+        <a href="http://127.0.0.1:8000/views/receive">RECEIVE</a>
+        <h4 id="info">INFO</h4>
+        <div id="infodropdown">
+            <a href="">WHAT IS MEAL SHARE?</a>
+            <a href="">HHH</a>
+        </div>
+    </div>
     <div class = "main_section">
         <div class="content">
             <img id="logo" src="../static/assets/logo.png" alt="Meal Share">
             <br>
             <br>
         <!--Title-->
-        <h2>We Are Ending Hunger In Our Community</h3>
+        <h1>We Are Ending Hunger In Our Community</h1>
         <br>
-        <h3>World Hunger Statistics</h3>
+        <h2>World Hunger Statistics</h2>
         <br>
         <!--Description-->
         <div class="stats">
